Arama kutucuğu eklendi, bazı güncellemeler yapıldı, Soket kurulumu yapıldı

--- a/appuser/templates/user/register.html
+++ b/appuser/templates/user/register.html
@@ -6,6 +6,7 @@
     {% csrf_token %}
     {{form}}
     <button class="btn btn-primary">Kayıt Ol</button>
+    <a href="/user/register/">Giriş Yap</a>
 </form>
 
 {% endblock content %}
