--- a/appuser/templates/user/login.html
+++ b/appuser/templates/user/login.html
@@ -6,6 +6,7 @@
     {% csrf_token %}
     {{form}}
     <button class="btn btn-primary">Giriş Yap</button>
+    <a href="/user/register/">Kayıt ol</a>
 </form>
 
 {% endblock content %}
