--- a/appuser/templates/user/login.html
+++ b/appuser/templates/user/login.html
@@ -7,6 +7,7 @@
     {{form}}
     <button class="btn btn-primary">Giriş Yap</button>
     <a href="/user/register/">Kayıt ol</a>
+    <p><a href="/user/password_reset/">Şifremi unuttum</a></p>
 </form>
 
 {% endblock content %}
