--- a/appuser/templates/user/password_reset_confirm.html
+++ b/appuser/templates/user/password_reset_confirm.html
@@ -11,7 +11,7 @@
                 {% for field in form %}
                     <div class="mb-3">
                         {{ field.label_tag }}
-                        {{ field|add_class:"form-control" }}
+                        {{ field }}
                         {% if field.errors %}
                             <div class="text-danger small">{{ field.errors|striptags }}</div>
                         {% endif %}
@@ -20,6 +20,12 @@
                 <button type="submit" class="btn btn-success">Şifreyi Güncelle</button>
             </form>
         </div>
+    </div>
+
+    <div class="mt-3">
+        <a href="{% url 'profile' %}" class="btn btn-outline-secondary">
+            ← Profili Gör
+        </a>    
     </div>
 </div>
 {% endblock %}
