--- a/need/templates/need/base.html
+++ b/need/templates/need/base.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load bootstrap_icons %}
 <!DOCTYPE html>
 <html>
 
@@ -7,12 +6,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport"
         content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
-    {% load bootstrap5 %}
-    {% bootstrap_css %}
+    
     <title>User</title>
-    {% comment %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/alertify.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/themes/default.min.css' %}" /> {% endcomment %}
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
 
@@ -124,6 +121,7 @@
         }
 
         .nav_link {
+            text-decoration:none;
             position: relative;
             color: var(--first-color-light);
             margin-bottom: 1.5rem;
@@ -198,46 +196,40 @@
         }
     </style>
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+
 </head>
 
 <body id="body-pd">
     <header class="header" id="header" style="display:flex; flex-direction:row; row-gap:8">
-        <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"> {% bs_icon 'list' size="1.2em" %} </i>
+        <div class="header_toggle"><i class="bi bi-list" > </i>
         </div>
         <div><a href="/add/" class="btn btn-outline-success">İhtiyacım Var</a></div>
     </header>
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
-<<<<<<< HEAD
-            <div>
-                <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'>{% bs_icon 'layers-fill' %}</i> <span
-                        class="nav_logo-name">NAV</span> </a>
-                <div class="nav_list">
-                    <a href="/" class="nav_link"> <i class='bx bx-user nav_icon'>{% bs_icon 'house-fill' %}</i> <span
-                            class="nav_name">Ana menü</span> </a>
-                    <a href="/" class="nav_link"> <i class='bx bx-bookmark nav_icon'>{% bs_icon 'view-list' %}</i> <span
-                            class="nav_name">Liste</span> </a>
-                    <a href="/user/profile/" class="nav_link"> <i class='bx bx-bar-chart-alt-2 nav_icon'>{% bs_icon
-                            'person' %}</i> <span class="nav_name">Profil</span> </a>
-                    <a href="/user/account-summary/" class="nav_link"> <i class='bx bx-wallet nav_icon'>{% bs_icon
-                            'person-lines-fill' %}</i><span class="nav_name">Hesap Özeti</span></a>
-                </div>
-            </div>
-            <a href="/user/logout/" class="nav_link"> <i class='bx bx-log-out nav_icon'>{% bs_icon 'box-arrow-right'
-                    %}</i> <span class="nav_name">Çıkış</span> </a>
-=======
             <div> 
-                <a href="#" class="nav_logo"> <i class='bx bx-layer nav_logo-icon'>{% bs_icon 'layers-fill' %}</i> <span class="nav_logo-name">NAV</span> </a>
+                <a href="#" class="nav_logo"> <i class="bi nav_icon bi-layers-fill" ></i> <span class="nav_logo-name">NAV</span> </a>
                 <div class="nav_list"> 
-                    <a href="/" class="nav_link"> <i class='bx bx-user nav_icon'>{% bs_icon 'house-fill' %}</i> <span class="nav_name">Ana menü</span> </a> 
-                    <a href="/" class="nav_link"> <i class='bx bx-bookmark nav_icon'>{% bs_icon 'view-list' %}</i> <span class="nav_name">Liste</span> </a> 
-                    <a href="/user/profile/" class="nav_link"> <i class='bx bx-bar-chart-alt-2 nav_icon'>{% bs_icon 'person' %}</i> <span class="nav_name">Profil</span> </a>
-                    <a href="/user/account-summary/" class="nav_link"> <i class='bx bx-wallet nav_icon'>{% bs_icon 'person-lines-fill' %}</i><span class="nav_name">Hesap Özeti</span></a>
-                    <a href="/user/stk_page/" class="nav_link"> <i class='bx bx-check-shield nav_icon'>{% bs_icon 'bank' %}</i> <span class="nav_name">STK Mısınız?</span> </a> 
+                    <a href="/" class="nav_link"><i class="bi nav_icon bi-house-fill" ></i> <span class="nav_name">Ana menü</span> </a> 
+                    <a href="/" class="nav_link"> <i class="bi nav_icon bi-view-list" ></i> <span class="nav_name">Liste</span> </a> 
+                    <a href="/user/profile/" class="nav_link"><i class="bi nav_icon bi-person" ></i> <span class="nav_name">Profil</span> </a>
+                    <a href="/user/account-summary/" class="nav_link"> <i class="bi nav_icon bi-person-lines-fill" ></i><span class="nav_name">Hesap Özeti</span></a>
+                    <a href="/user/stk_page/" class="nav_link"> <i class="bi nav_icon bi-bank" ></i> <span class="nav_name">STK Mısınız?</span> </a> 
+                    {% if 'category' in user_permissions %}
+                        <a href="/kinds/" class="nav_link"> <i class="bi nav_icon bi-tags-fill text-danger" ></i> <span class="nav_name text-danger">Kategoriler</span> </a>
+                    {% endif %}
+                    {% if 'data_import' in user_permissions or 'data_export' in user_permissions %}
+                        <a href="/import-export/" class="nav_link"><i class="bi nav_icon bi-file-earmark-break-fill text-danger" ></i> <span class="nav_name text-danger">İçe - Dışa Aktar</span> </a>
+                    {% endif %}
+                    {% if 'role_update' in user_permissions or 'role_add' in user_permissions %}
+                        <a href="/roles/" class="nav_link"> <i class="bi nav_icon bi-person-vcard-fill text-danger" ></i> <span class="nav_name text-danger">Roller</span> </a>
+                    {% endif %}
+                    {% if 'user_delete' in user_permissions or 'user_information' in user_permissions %}
+                        <a href="/user/users/" class="nav_link"> <i class="bi nav_icon bi-people-fill text-danger" ></i> <span class="nav_name text-danger">Kullanıcılar</span> </a>
+                    {% endif %}
                 </div>
             </div> 
-            <a href="{% url 'logout_confirm' %}" class="nav_link"> <i class='bx bx-log-out nav_icon'>{% bs_icon 'box-arrow-right' %}</i> <span class="nav_name">Çıkış</span> </a>
->>>>>>> 50d9253619b4f052a7c0fb8e7a6012d2014469fd
+            <a href="{% url 'user:logout_confirm' %}" class="nav_link"> <i class='bi bi-box-arrow-right nav_icon'></i> <span class="nav_name">Çıkış</span> </a>
         </nav>
     </div>
 
@@ -245,19 +237,17 @@
 
 
 
-    <div class="container pt-4">
+    <div class="container pt-4" style="margin-top:60px;">
         <h1 class="text-center">{% block title %}{% endblock title %}</h1>
         <div class="content">
             {% block content %}{% endblock content %}
         </div>
     </div>
-    {% bootstrap_javascript %}
-    {% comment %}
-    <script src="{% static 'js/alertify.min.js'%}"></script> {% endcomment %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
     <script>
-        const socket = new WebSocket("ws://" + window.location.host + "/ws/chat/");
+         const socket = new WebSocket("ws://" + window.location.host + "/ws/chat/");
 
         socket.onmessage = function (e) {
             const data = JSON.parse(e.data);
@@ -267,9 +257,7 @@
 
         socket.onopen = function () {
             socket.send(JSON.stringify({ message: "Merhaba!" }));
-        }; socket.onopen = function () {
-            socket.send(JSON.stringify({ type: "system", message: "Merhaba!" }));
-        };
+        }; 
 
 
 
@@ -283,7 +271,7 @@
                 }));
             }
 
-        });
+        }); 
     </script>
 
 
